# devbase-setup

./: .coverage  .devbase.json  .devbaseignore  .gitignore  .gitingestignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  QA_CHECKLIST.md  README.md  SECURITY.md  TESTING.md  USAGE-GUIDE.md  bootstrap.ps1  bootstrap.py  devbase.py  install.sh  mkdocs.yml  package.json  pending_prs.json  process_drafts.ps1  pyproject.toml  release.config.js  requirements.txt
.Jules/: palette.md
.claude/: settings.local.json
.devbase/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge-dependabot.yml  ci.yml  daily_audit.yml  docs.yml  release.yml  semantic-release.yml
.jules/: bolt.md  sentinel.md
00-09_SYSTEM/: desktop.ini
00-09_SYSTEM/02_planning/: OVEN.md  icebox.md
00-09_SYSTEM/07_documentation/: JOURNAL.md
00-09_SYSTEM/07_documentation/decisions/: 2026-02-24_decision_refactor-auth.md
00-09_SYSTEM/07_documentation/templates/: template_decision.md  template_guide.md  template_spec.md
10-19_KNOWLEDGE/: desktop.ini
10-19_KNOWLEDGE/10_references/: my-new-note.md
10-19_KNOWLEDGE/11_public_garden/concepts/: synthesis-202602241900.md
10-19_KNOWLEDGE/11_public_garden/test/: _index.md  note-alpha.md  note-beta.md  spaced-rep.md
10-19_KNOWLEDGE/12_private-vault/journal/: weekly-2026-W09.md
10-19_KNOWLEDGE/13_architecture_and_specs/: api-discovery-note.md
18_adr-decisions/: 0001-redis-for-session-caching.md
30-39_OPERATIONS/: desktop.ini
40-49_MEDIA_ASSETS/: desktop.ini
_deprecated_ps1/: SUNSET_NOTICE.md  common-functions.ps1  setup-ai.ps1  setup-code.ps1  setup-hooks.ps1  setup-operations.ps1  setup-pkm.ps1  setup-templates.ps1
_deprecated_ps1/assets/: fs_performance.ps1.asset  observability.ps1.asset  telemetry.ps1.asset
completions/: _devbase.ps1
conductor/: index.md  tracks.md
conductor/tracks/remediation-v5/: index.md  plan.md  spec.md
docs/: ARCHITECTURE.md  MANUAL_TESTING_GUIDE.md  MIGRATION.md  PRODUCT_BRIEF.md  TECHNICAL_DESIGN_DOC.md  USAGE-GUIDE.md  USER_GUIDE.md  WORKFLOW_IA_METHODOLOGY.md  academic-workflow.md  cheatsheet.md  contributing.md  digest.txt  index.md
docs/adr/: 0002-service-container-pattern.md
docs/cli/: ai.md  analytics.md  audit.md  backup.md  clean.md  core.md  debug.md  development.md  docs.md  doctor.md  goto.md  hydrate.md  navigation.md  new.md  note.md  operations.md  overview.md  pkm.md  quick.md  quickstart.md  security_check.md  setup.md  study.md  telemetry.md
docs/explanation/: air-gap-security.md  clean-architecture.md  johnny-decimal.md
docs/getting-started/: installation.md  quick-start.md  structure.md
docs/how-to/: backup-workspace.md  setup-git-hooks.md
docs/tutorials/: first-day.md  first-project.md
modules/: cli-functions.ps1  common-functions.ps1  detect-language.ps1  setup-ai.ps1  setup-code.ps1  setup-core.ps1  setup-hooks.ps1  setup-operations.ps1  setup-pkm.ps1  setup-templates.ps1
modules/assets/: devbase.ps1.asset  observability.ps1.asset
modules/python/: ai_assistant.py  filesystem.py  setup_ai.py  setup_code.py  setup_core.py  setup_operations.py  setup_pkm.py  state.py
modules/python/knowledge/: __init__.py  schema.py
modules/templates/: templates-readme.md.template
modules/templates/ci/: ci-dotnet.yml.template  ci-node.yml.template  ci-python.yml.template
modules/templates/code/: README.md.template
modules/templates/core/: .gitignore.template  .gitingestignore.template  00.00_index.md.template
modules/templates/hooks/: README.md.template  commit-msg.ps1.template  install-hooks.ps1.template  post-commit.ps1.template  pre-commit.ps1.template  pre-push.ps1.template
powershell/: README.md  bootstrap.ps1
powershell/completions/: devbase.bash
powershell/modules/: common-functions.ps1  setup-ai.ps1  setup-code.ps1  setup-core.ps1  setup-hooks.ps1  setup-operations.ps1  setup-pkm.ps1  setup-templates.ps1
python/: README.md  devbase.py  install.sh  requirements.txt
python/completions/: devbase_complete.py
python/modules/: ai_assistant.py  cli_ux.py  detect_language.py  onboarding.py  setup_ai.py  setup_code.py  setup_hooks.py  setup_operations.py  setup_pkm.py  setup_templates.py  template_utils.py  ui.py  wizard.py
python/tests/: conftest.py  test_ai.py  test_ai_pipeline.py  test_commands.py  test_duckdb_adapter.py  test_knowledge_graph.py  test_new_modules.py  test_setup_code.py  test_setup_core.py  test_setup_pkm.py  test_state.py  test_taxonomy.py  test_worktree_custom.py
scripts/: build_paper.sh  daily_audit.sh  setup-productivity.ps1  shell-integration.sh
scripts/migration/: __init__.py  migrate_archive.py  migrate_docs.py  migrate_scripts.py  migration_config.py  post_migration.py  pre_migration.py  run_migration.py
src/devbase/: __init__.py  __main__.py  main.py
temp_workspace/: .gitignore
temp_workspace/00-09_SYSTEM/: 00.00_index.md
templates/: .devbaseignore.template
tests/: conftest.py  test_ai.py  test_audit.py  test_audit_ast.py  test_audit_command.py  test_audit_task.py  test_commands.py  test_debug_lazy_load.py  test_devbase_cli.py  test_docs_new.py  test_duckdb_adapter.py  test_duckdb_schema.py  test_event_repository.py  test_filesystem.py  test_knowledge_graph.py  test_knowledge_search.py  test_ops_ux.py  test_perf_kg_io.py  test_pkm_highlight.py  test_pkm_new.py  test_pkm_search.py  test_pkm_security.py  test_pkm_ux.py  test_sanitizer.py  test_search_engine.py  test_security_check.py  test_security_pkm_injection.py  test_security_subprocess.py  test_security_utils.py  test_setup_ai.py  test_setup_code.py  test_setup_core.py  test_setup_operations.py  test_setup_pkm.py  test_state.py  test_study.py  test_ui.py  test_workspace.py
tests/benchmarks/: benchmark_clean.py
vscode-devbase/: README.md  package.json  tsconfig.json
vscode-devbase/snippets/: devbase.code-snippets
vscode-devbase/src/: extension.ts
(+166 files in other folders)
