[project]
name = "devbase"
version = "4.0.6"
description = "DevBase - Personal Engineering Operating System"
authors = [
    { name = "DevBase Team", email = "devbase@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["devops", "workspace", "cli", "johnny-decimal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI Framework
    "typer>=0.12.0",
    "rich>=13.7.0",
    "shellingham>=1.5.0",
    # Template Engine
    "jinja2>=3.1.6",
    "toml>=0.10.2",
    # Knowledge Management (Fase 4)
    "networkx>=3.2",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
platform = [
    # Template engine replacement (Fase 7)
    "copier>=9.1.0",
]
viz = [
    # Knowledge graph visualization
    "pyvis>=0.3.2",
    "duckdb>=0.10.0",
]

[project.scripts]
devbase = "devbase.main:app"
db = "devbase.main:app"

[project.urls]
Homepage = "https://github.com/walcimarzd/devbase-setup"
Documentation = "https://walcimarzd.github.io/devbase-setup/"
Repository = "https://github.com/walcimarzd/devbase-setup"
Changelog = "https://github.com/walcimarzd/devbase-setup/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devbase"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=devbase --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.10",
]
